fixing gmail info box on smaller screens

--- a/style.scss
+++ b/style.scss
@@ -1639,6 +1639,11 @@ img,
       height: 40px;
     }
   }
+  .gmail-info-box {
+    &.active {
+      left: 50px !important;
+    }
+  }
   #side-nav {
     display: none;
   }
